Gtk: Resolve scrollbar styling
Fixup the scrollbar styling to match that in Jessie.

--- a/media/CSS/scrollbar-wide.css
+++ b/media/CSS/scrollbar-wide.css
@@ -13,10 +13,10 @@
     -GtkScrolledWindow-scrollbars-within-bevel: 1;
 }
 
-GtkScrolledWindow {
-    padding: 10px;
+scrolledwindow overshoot,
+scrolledwindow undershoot {
+    background-image: none;
 }
-
 
 /********************************************************
  * Scrollbars                                           *
@@ -37,24 +37,19 @@ GtkScrolledWindow {
 @define-color scrollbar_slider_insensitive alpha(black, 0);
 @define-color scrollbar_slider_unfocused @bg_color;
 
-.scrollbar {
+scrollbar {
+    background-color: @scrollbar_trough;
     background-image: none;
     border-style: solid;
-    -GtkRange-trough-border: 16;
     -GtkRange-arrow-scaling: 1.3;
     -GtkScrollbar-has-backward-stepper: true;
     -GtkScrollbar-has-forward-stepper: true;
-    -GtkRange-slider-width: 12; /* orig 12 */
-    /* minimum size for the slider. sadly can't be in '.slider'
-       where it belongs */
-    -GtkScrollbar-min-slider-length: 42;
-
     -GtkRange-stepper-spacing: 12;
     -GtkRange-trough-under-steppers: 1;
 }
 
-.scrollbars-junction, /* the small square between scrollbars!!! */
-.scrollbar.trough {
+scrollbars-junction, /* the small square between scrollbars!!! */
+scrollbar trough {
     background-image: none;
     background-color: @scrollbar_trough;
     border-width: 0;
@@ -62,73 +57,45 @@ GtkScrolledWindow {
     border-image: none;
 }
 
-.scrollbar.button,
-.scrollbar.button:active
-/*.scrollbar.button:active:hover,
-.scrollbar.button:disabled,
-.scrollbar.button:hover:backdrop,
-.scrollbar.button:active:hover:backdrop*/ {
+scrollbar button,
+scrollbar button:active {
     border-style: none;
     border-image: none;
     border-radius: 0;
     background-image: none;
     background-color: transparent;
+    min-width: 26px;
+    min-height: 26px;
+    padding: 10px;
 }
 
-.scrollbar.button:active
+scrollbar button:active
 /*.scrollbar.button:active:hover*/ {
     background-color: mix(@scrollbar_slider, @scrollbar_trough, 0.8);
 }
 
-/*.scrollbar.button.top:hover {
-    box-shadow: 0 -1 inset mix(@scrollbar_slider, @scrollbar_trough, 0.8);
-}
-
-.scrollbar.button.bottom:hover {
-    box-shadow: 0 1 inset mix(@scrollbar_slider, @scrollbar_trough, 0.8);
-}
-
-.scrollbar.button.right:hover {
-    box-shadow: 1 0 inset mix(@scrollbar_slider, @scrollbar_trough, 0.8);
-}
-
-.scrollbar.button.left:hover {
-    box-shadow: -1 0 inset mix(@scrollbar_slider, @scrollbar_trough, 0.8);
-}
-
-.scrollbar.button.top:hover:backdrop,
-.scrollbar.button.bottom:hover:backdrop,
-.scrollbar.button.right:hover:backdrop,
-.scrollbar.button.left:hover:backdrop {
-    box-shadow: none;
-}
-*/
-.scrollbar.button {
+scrollbar button {
     color: @scrollbar_slider;
 }
 
-/*.scrollbar.button:hover {
-    color: @scrollbar_slider_prelight;
-}*/
-
-.scrollbar.button:disabled {
+scrollbar button:disabled {
     color: mix(@scrollbar_slider, @scrollbar_trough, 0.6);
 }
 
-.scrollbar.button:active {
+scrollbar button:active {
     color: @scrollbar_slider_active;
 }
 
-.scrollbar.button:backdrop {
+scrollbar button:backdrop {
     color: @scrollbar_slider_unfocused;
 }
 
-.scrollbar.button:disabled:backdrop {
+scrollbar button:disabled:backdrop {
     color: mix(@scrollbar_slider_unfocused, @scrollbar_trough_unfocused, 0.7);
 }
 
-.scrollbar.trough.vertical,
-.scrollbar.trough.vertical:backdrop {
+scrollbar trough.vertical,
+scrollbar trough.vertical:backdrop {
     background-image: -gtk-gradient (linear,
     left top, right top,
     from (shade (@theme_bg_color, 0.90)),
@@ -136,8 +103,8 @@ GtkScrolledWindow {
     to (shade(@theme_bg_color, 1.06)));
 }
 
-.scrollbar.trough.horizontal,
-.scrollbar.trough.horizontal:backdrop {
+scrollbar trough.horizontal,
+scrollbar trough.horizontal:backdrop {
     background-image: -gtk-gradient (linear,
     left top, left bottom,
     from (shade (@theme_bg_color, 0.90)),
@@ -145,7 +112,7 @@ GtkScrolledWindow {
     to (shade(@theme_bg_color, 1.06)));
 }
 
-.scrollbar.trough:disabled {
+scrollbar trough:disabled {
     background-color: @scrollbar_trough_insensitive;
     border-style: solid;
     border-image: none;
@@ -153,8 +120,8 @@ GtkScrolledWindow {
     border-width: 3px;
 }
 
-.scrollbars-junction:backdrop,
-.scrollbar.trough:backdrop {
+scrollbars-junction:backdrop,
+scrollbar trough:backdrop {
     background-image: none;
     background-color: @scrollbar_trough_unfocused;
     border-width: 0;
@@ -162,7 +129,7 @@ GtkScrolledWindow {
     border-image: none;
 }
 
-.scrollbar.trough:disabled:backdrop {
+scrollbar trough:disabled:backdrop {
     background-image: none;
     background-color: mix(@scrollbar_trough_unfocused,
                       @scrollbar_trough_insensitive, 0.5);
@@ -171,7 +138,7 @@ GtkScrolledWindow {
     border-image: none;
 }
 
-.scrollbar.slider {
+scrollbar slider {
     background-image: none;
     background-color: @scrollbar_slider;
     border-radius: 20px;
@@ -181,7 +148,17 @@ GtkScrolledWindow {
     border-width: 2px;
 }
 
-.scrollbar.slider:hover {
+scrollbar.vertical slider {
+    min-width: 12px;
+    min-height: 42px;
+}
+
+scrollbar.horizontal slider {
+    min-height: 12px;
+    min-width: 42px;
+}
+
+scrollbar slider:hover {
     transition: 1000ms linear; /* doesn't work */
     background-image: none;
     background-color: @scrollbar_slider_prelight;
@@ -191,7 +168,7 @@ GtkScrolledWindow {
     border-width: 2px;
 }
 
-.scrollbar.slider:hover:active {
+scrollbar slider:hover:active {
     background-image: none;
     background-color: @scrollbar_slider_active;
     border-style: solid;
@@ -200,7 +177,7 @@ GtkScrolledWindow {
     border-width: 3px;
 }
 
-.scrollbar.slider:disabled {
+scrollbar slider:disabled {
     background-color: @scrollbar_slider_insensitive;
     border-style: solid;
     border-image: none;
@@ -208,7 +185,7 @@ GtkScrolledWindow {
     border-width: 1px;
 }
 
-.scrollbar.slider:backdrop {
+scrollbar slider:backdrop {
     background-color: @scrollbar_slider_unfocused;
     border-style: solid;
     border-image: none;
